--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,6 +10,14 @@
             <div class="today_air">
                 Куплено авиабилетов сегодня <span class="num">{{ bought_air_today }}</span>
             </div>
+            <div class="files">
+                <div class="export">
+                    <button id="import_button">Экспорт</button>
+                </div>
+                <div class="import">
+                    <input id="import_file" type="file">
+                </div>
+            </div>
         </div>
         <div class="week_stats">
             Статистика покупки билетов за неделю
