--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -25,7 +25,7 @@
                 <ul class="path">
                     {% set full_price=namespace(value=0) %}
                     {% for node in path %}
-                        <li ac_id="{{ node['class_id'] }}">{{ node['city_from'] + '-' + node['city_to'] + '  Цена билета: {}$'.format(node['price'])}}</li>
+                        <li ac_id="{{ node['class_id'] }}">{{ node['city_from'] + '-' + node['city_to'] + '  Цена билета: {}$'.format(node['price'])}} Класс: <span class="class_title">{{ node['class_title']}}</span></li>
                         {% set full_price.value=full_price.value + node['price'] %}
                     {% endfor %}
 
@@ -63,7 +63,7 @@
                 <ul class="path">
                     {% set full_price=namespace(value=0) -%}
                     {% for node in path -%}
-                        <li ac_id="{{ node['class_id'] }}">{{ node['city_from'] + '-' + node['city_to'] + '  Цена билета: {}$'.format(node['price'])}}</li>
+                        <li ac_id="{{ node['class_id'] }}">{{ node['city_from'] + '-' + node['city_to'] + '  Цена билета: {}$'.format(node['price'])}} Класс: <span class="class_title">{{ node['class_title']}}</span></li>
                         {% set full_price.value=full_price.value + node['price'] %}
                     {% endfor -%}
                 </ul>
