--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-.form_contaifilner, .ticket, .ticket_buy{
+.form_container, .ticket, .ticket_buy{
     border: 2px solid #000000;
     border-radius: 10px;
     margin: 10px;
